objects/Financial_Account_Customer__c.object
<CustomObject>
    <description>Junction object linking a financial account to its primary borrower(s) and co-­‐borrower(s) and
captures customer information related to the specific account such as privacy settings.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Special_BillTo__c</fullName>
        <description>Special Address</description>
        <label>Care Of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Special_Garage__c</fullName>
        <label>Care Of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSG_Flag__c</fullName>
        <formula>Financial_Account__r.BSG_Flag__c</formula>
        <label>(IVR) BSG Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code_Extn__c</fullName>
        <label>Billing Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Position__c</fullName>
        <label>Borrower Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Status__c</fullName>
        <label>Borrower Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToPay_Electronic_Biz_Agreement_Date__c</fullName>
        <label>ClickToPay Electronic Biz Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClickToPay_Electronic_Biz_Agreement__c</fullName>
        <label>ClickToPay Electronic Biz Agreement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Terms_And_Conditions_Date__c</fullName>
        <description>C2P T&amp;C Date</description>
        <label>Click To Pay Terms And Conditions Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Terms_And_Conditions__c</fullName>
        <label>Click To Pay Terms And Conditions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Version__c</fullName>
        <description>C2P Version</description>
        <label>Click To Pay Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <formula>Financial_Account__r.Communication_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Borrower_Number__c</fullName>
        <description>First Character of Customer_role_Type</description>
        <formula>LEFT(Customer_Role_Type__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Borrower Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Full_Name__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to concatenate the proper name field components from the related account object so the customer may be addressed by their full name in a letter or other communication.</description>
        <formula>IF(Account__r.IsPersonAccount,
  IF(!ISBLANK(TEXT(Account__r.Salutation)), TEXT(Account__r.Salutation) &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.FirstName), Account__r.FirstName &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.Middle_Name__pc), Account__r.Middle_Name__pc &amp; &quot; &quot;, &quot;&quot;) &amp;
  Account__r.LastName &amp;
  IF(!ISBLANK(Account__r.Name_Suffix__pc), &quot;, &quot; &amp; Account__r.Name_Suffix__pc, &quot;&quot;)
,
  Account__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Role_Type__c</fullName>
        <label>Customer Role Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp) == &apos;function&apos;) {srcUp(&apos;/&quot; &amp; Account__c &amp; &quot;?isdtp=vw&apos;);} else {window.open(&apos;/&quot; &amp; Account__c &amp; &quot;&apos;, &apos;_self&apos;);}&quot;,
IF(Account__r.IsPersonAccount,
  IF(!ISBLANK(TEXT(Account__r.Salutation)), TEXT(Account__r.Salutation) &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.FirstName), Account__r.FirstName &amp; &quot; &quot;, &quot;&quot;) &amp;
  Account__r.LastName &amp;
  IF(!ISBLANK(Account__r.Name_Suffix__pc), Account__r.Name_Suffix__pc, &quot;&quot;)
,
  Account__r.Name
)
, &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Abbreviated_Consent_Date__c</fullName>
        <description>Abbreviated Consent Date</description>
        <label>Election Abbreviated Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Election_Abbreviated_Consent__c</fullName>
        <label>Abbreviated Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Direct_Mail_Marketing__c</fullName>
        <label>Direct Mail Marketing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Electronic_Business_Agreement__c</fullName>
        <label>Electronic Business Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Email_Marketing__c</fullName>
        <label>Email Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Home_Phone_Marketing__c</fullName>
        <label>Home Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Language_Preference__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc Trans May Be Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Mobile_Phone_Marketing__c</fullName>
        <label>Mobile Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Other_Phone_Marketing__c</fullName>
        <label>Other Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Overall_Consent_Date__c</fullName>
        <description>Overall Consent Date</description>
        <label>Election Overall Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Election_Overall_Consent__c</fullName>
        <label>Overall Consent</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_NotReceivedEmail__c</fullName>
        <label>Payment Not Received Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_NotReceivedText__c</fullName>
        <label>Payment Not Received Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Received_Email__c</fullName>
        <label>Payment Received Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Received_Text__c</fullName>
        <label>Payment Received Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Day__c</fullName>
        <label>Payment Reminder Day</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Email__c</fullName>
        <label>Payment Reminder Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Text__c</fullName>
        <label>Payment Reminder Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Text_Marketing__c</fullName>
        <label>Text Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement_Date__c</fullName>
        <description>EBA Date</description>
        <label>Electronic Business Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FA_Role_Status__c</fullName>
        <description>external ID -  Account No~Position~Status</description>
        <externalId>true</externalId>
        <label>FA Role Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Customer__c</fullName>
        <externalId>true</externalId>
        <label>Financial Account Customer</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <formula>Financial_Account__r.Financial_Account_Number__c</formula>
        <label>(IVR) Financial Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Name_or_Business_Name__c</fullName>
        <formula>IF(Account__r.IsPersonAccount, Account__r.FirstName, Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name or Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag Address Lock BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag Address Lock Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Bankruptcy__c</fullName>
        <description>Bankruptcy Code</description>
        <label>Flag Bankruptcy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_DNC_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_DNC_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Home Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Home Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Home Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Home Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Non-Landline Indicator Flag</description>
        <label>Flag Home Phone NonLanLine BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Status__c</fullName>
        <description>Military Flag</description>
        <label>Flag Military Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_IsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone type. UCM publishes the data to downstream system to identify if the mobile number entered is truly mobile (CP 2401)</description>
        <label>Mobile Phone is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Office_Of_Foreign_Asset_Control__c</fullName>
        <label>Flag Office Of Foreign Asset Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_SCRA_Status__c</fullName>
        <description>SCRA Flag</description>
        <label>Flag SCRA Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_DNC_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_DNC_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Work Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Work Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Work Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Is_Mobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Work Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Non-Landline Indicator Flag</description>
        <label>Flag Work Phone NonLanLine BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garage_Zip_Code_Extn__c</fullName>
        <label>Garage Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone_BillTo__c</fullName>
        <description>Home Phone Number</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Garage__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_BillTo__c</fullName>
        <formula>CASE(Home_Phone_No_Call_Reason_Code_BillTo__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Home #&quot;,
&quot;S&quot;, &quot;S - Home # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Home #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Home # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Code_BillTo__c</fullName>
        <label>Home Phone No-Call Reason Code BillTo</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Code_Garage__c</fullName>
        <label>Home Phone No-Call Reason Code Garage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_No_Call_Reason_Garage__c</fullName>
        <formula>CASE(Home_Phone_No_Call_Reason_Code_Garage__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Home #&quot;,
&quot;S&quot;, &quot;S - Home # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Home #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Home # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Ownership_Score_Billing__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Home Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Ownership_Score_Garage__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Home Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Home_Phone_Acknowledged_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Home Phone Format Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Home_Phone_Acknowledged_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Home Phone Format Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Mobile_Phone_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid mobile phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Mobile Phone Format Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Work_Phone_Acknowledged_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Work Phone Format Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Work_Phone_Acknowledged_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to indicate if they acknowledge they&apos;re providing an invalid home phone number.</description>
        <inlineHelpText>Check to acknowledge an invalid phone number has been entered.</inlineHelpText>
        <label>Work Phone Format Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_BillTo_Name__c</fullName>
        <label>Bill To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_BillTo__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_Garage__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_State_Zip__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate third line (city, state, zip) of a mailing destination for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c),
Mailing_City_BillTo__c &amp; &quot;, &quot; &amp; TEXT(Mailing_State_BillTo__c) &amp; &quot; &quot; &amp; Mailing_PostalCode_BillTo__c &amp; IF(!ISBLANK(Billing_Zip_Code_Extn__c), &quot;-&quot; &amp; Billing_Zip_Code_Extn__c, &quot;&quot;)
,
Mailing_City_Garage__c &amp; &quot;, &quot; &amp; TEXT(Mailing_State_Garage__c) &amp; &quot; &quot; &amp; Mailing_Postal_Code_Garage__c &amp; IF(!ISBLANK(Garage_Zip_Code_Extn__c), &quot;-&quot; &amp; Garage_Zip_Code_Extn__c, &quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing city for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
Mailing_City_BillTo__c, 
Mailing_City_Garage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_CountryCode_BillTo__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing CountryCode BillTo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code_Garage__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing Country Code Garage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode_BillTo_Ext__c</fullName>
        <label>Mailing PostalCode BillTo Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode_BillTo__c</fullName>
        <description>Zip Code Ext</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_Garage_Ext__c</fullName>
        <label>Mailing Postal Code Garage Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_Garage__c</fullName>
        <description>Zip Code</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>